--- a/style/index.scss
+++ b/style/index.scss
@@ -53,7 +53,7 @@
 }
 
 body {
-  background-color: #f6f6f6;
+  background-color: rgb(224, 224, 224);
   font-family: 'Roboto', sans-serif;
   line-height: 150%;
 }
@@ -71,16 +71,6 @@ a {
   transition: all .25s;
 }
 
-.pattern {
-  background: url(./images/pattern.png);
-  height: 100%;
-  opacity: .05;
-  position: fixed;
-  left: 0; top: 0;
-  width: 100%;
-  z-index: -1;
-}
-
 header {
   position: fixed;
   top: 0; 
@@ -89,8 +79,8 @@ header {
   width: 100vw; 
   box-shadow: 0 5px 16px #00000040;
   height: 100px;
-  background-color: #6092db;
-  padding: 10px 20px;
+  background-color: rgb(41, 100, 185);
+  padding: 0px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -660,8 +650,7 @@ ul {
     grid-area: nav;
     opacity: 1;
     visibility: visible;
-    width: 95%;
-    border-radius: 100px;
+    width: 100%;
     background: #333;
     border-bottom: 2px solid #437bd0;
     margin: 1rem auto 0 auto;
